@@ -25,7 +25,10 @@ functional area of the code works.
 <dd>We may in the future use blogs or wikis for the project pages.  This would enable them to be updated more easily and to allow collaboration to take place
 within the project pages themselves.
 
-<dt>[TODO: Add links to existing Apple docs]</dt>
+<dt>Existing Documentation</dt>
+<dd><a href="http://developer.apple.com/documentation/Cocoa/Conceptual/DisplayWebContent/DisplayWebContent.html" />Introduction to WebKit Objective-C Programming Guide</a></dd>
+<dd>[TODO: Add links to other existing Apple docs]</dd>
+
 </dl>
 
 <?php
